# natsrpy

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: CI.yml  release.yml  test.yml
python/natsrpy/: __init__.py
python/natsrpy/_inner/: __init__.pyi  message.pyi
python/natsrpy/_inner/js/: __init__.pyi  kv.pyi  stream.pyi
python/natsrpy/_internal/: __init__.pyi
python/natsrpy/_internal/jetstream/: __init__.pyi  kv.pyi
python/natsrpy/js/: __init__.py  kv.py  stream.py
python/tests/: conftest.py  test_publish.py
src/: lib.rs  message.rs  nats_cls.rs  subscription.rs
src/exceptions/: py_err.rs  rust_err.rs
src/jetstream/: jetstream.rs  kv.rs  mod.rs
src/js/: jetstream.rs  kv.rs  mod.rs  stream.rs
src/utils/: futures.rs  headers.rs  mod.rs  py.rs
