[package]
name = "natsrpy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "natsrpy"
crate-type = ["cdylib"]

[dependencies]
async-nats = "0.46"
bytes = "1.11.1"
futures-util = "0.3.32"
log = "0.4.29"
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-log = "0.13.3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
