[package]
name = "natsrpy"
# Don't update version manually. It's set during release workflow.
version = "0.0.0"
edition = "2024"
description = "Python NATS client written in Rust"
repository = "https://github.com/taskiq-python/natsrpy"
license-file = "LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "_inner"

[dependencies]
async-nats = "0.46"
bytes = "1.11.1"
futures-util = "0.3.32"
log = "0.4.29"
pyo3 = { version = "0.28", features = ["abi3"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-log = "0.13.3"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
