[project]
name = "natsrpy"
requires-python = ">=3.8"
license-files = ["LICENSE"]
description = "Nats client library written in rust"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
module-name = "natsrpy._inner"
python-source = "python"
