[project]
name = "natsrpy"
description = "Nats client library written in rust"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[dependency-groups]
dev = ["pytest>=9,<10"]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
module-name = "natsrpy._inner"
python-source = "python"
